[package]
name = "kati"
version = "0.1.0"
edition = "2024"
default-run = "rkati"

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
criterion = { version = "0.5.1", features = ["html_reports"] }
env_logger = "0.11.8"
gperftools = { version = "0.2.0", features = ["heap"], optional = true }
libc = "0.2.172"
log = "0.4.27"
memchr = "2.7.4"
os_pipe = "1.2.1"
parking_lot = { version = "0.12.3" }

[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator = "0.6.0"

[features]
gperf = ["dep:gperftools"]

[[bin]]
name = "rkati"
path = "src-rs/main.rs"

[[bin]]
name = "find_emulator"
path = "src-rs/bins/find_emulator.rs"

[lib]
path = "src-rs/lib.rs"

[[bench]]
name = "strutil_benchmark"
harness = false
